Change header logo, Implement fixed header on mobile, Apply new logo on 'what we do'

--- a/assets/css/header-fixed.css
+++ b/assets/css/header-fixed.css
@@ -33,7 +33,7 @@
 	width: 70px;
 	height: 100%;
 	margin: 0;
-	background: url(../img/logo/rucy_dark.png);
+	background: url(../img/logo/rucy_min_dark.png);
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -41,7 +41,7 @@
 /* The navigation links */
 
 .header-fixed .header-limiter a {
-	color: #ffffff;
+	color: #000000;
 	text-decoration: none;
 }
 
@@ -53,9 +53,8 @@
 
 .header-fixed .header-limiter nav a{
 	display: inline-block;
-	padding: 0 5px;
+	padding: 0 8px;
 	text-decoration:none;
-	color: #ffffff;
 	opacity: 0.9;
 }
 
@@ -76,8 +75,8 @@ body.fixed .header-fixed {
 	height: 50px;
 	position: fixed;
 	width: 100%;
-	background-color:#191919;
-	box-shadow:0 1px 1px #333;
+	background-color:#ffffff;
+	/* box-shadow:0 1px 1px #333; */
 	top: 0;
 	left: 0;
 	z-index: 1;
@@ -89,9 +88,6 @@ body.fixed .header-fixed-placeholder {
 
 body.fixed .header-fixed .header-limiter .header-logo {
 	width: 60px;
-	background: url(../img/logo/rucy_min_white.png);
-	background-repeat: no-repeat;
-    background-size: contain;
 }
 
 body.fixed .header-fixed .header-limiter nav {
@@ -106,27 +102,22 @@ body.fixed .header-fixed .header-limiter nav {
 
 	.header-fixed {
 		padding: 20px;
-		height: 75px;
-	}
-	
-	.header-fixed .header-limiter .header-logo {
-		background: url(../img/logo/rucy_min_dark.png);
-		background-repeat: no-repeat;
-		background-size: contain;
+		width: 100%;
+		height: 60px;
 	}
 
 	.header-fixed .header-limiter nav {
 		display: none;
-		/* line-height: 1;
-		float:none; */
-	}
-
-	/* .header-fixed .header-limiter nav a {
-		font-size: 13px;
 	}
 
 	body.fixed .header-fixed {
-		display: none;
-	} */
+		padding: 16px 20px;
+		height: 50px;
+		background: #ffffff;
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 1;
+	}
 
 }
